deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: panel-service
  labels:
    app: panel
    component: web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: panel
    component: web
